--- a/website/website/static/general.css
+++ b/website/website/static/general.css
@@ -49,6 +49,9 @@
   /* Document selection */
   --selected-background: #ededf4;
   --selected-border: #e6e6ef;
+
+  /* Source links */
+  --source-link-background: #d9d9d9;
 }
 
 a {
@@ -95,6 +98,9 @@ a:visited {
     /* Selections */
     --selected-background: #363637;
     --selected-border: #aeaeb2;
+
+    /* Source links */
+    --source-link-background: #494949;
   }
 
   .menu-toggle-button:not(.hamburger) {
@@ -130,6 +136,13 @@ body.dark-mode-dark {
   /* Links */
   --link-color: #c45f5f;
   --link-visited-color: #c45f5f;
+
+  /* Selections */
+  --selected-background: #363637;
+  --selected-border: #aeaeb2;
+  
+  /* Source links */
+  --source-link-background: #494949;
 }
 
 body.dark-mode-dark .menu-toggle-button:not(.hamburger) {
